--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: kronos # you probably want to 'snapcraft register <name>'
+name: kronos-linux # you probably want to 'snapcraft register <name>'
 base: core18 # the base snap is the execution environment for this snap
 version: '2.5.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Kronos the Sega Saturn emulator
